--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "start": "node ./src/index.js",
+    "start": "node dist/index.js",
     "build": "tsc",
     "dev": "nodemon --exec ts-node ./src/index.ts",
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
